--- a/css/index/_about.scss
+++ b/css/index/_about.scss
@@ -30,15 +30,15 @@
       h2 {
         margin-bottom: 10px;
         @media (min-width: 1200px) {
-          margin-bottom: -15px;
+          // margin-bottom: -15px;
         }
       }
       h3 {
         // margin-bottom: 40px;
         margin-bottom: 0;
-        // margin-top: 30px;
+        margin-top: 30px;
         @media (min-width: 1200px) {
-          margin-bottom: -30px;
+          margin-bottom: 20px;
         }
       }
 
@@ -61,7 +61,7 @@
         @media (min-width: 1200px) {
           padding: 10px 0 10px 0;
           text-align: left;
-          // line-height: 2rem;
+          line-height: 2rem;
         }
       }
       //   .btn-black {
