--- a/css/index/_case.scss
+++ b/css/index/_case.scss
@@ -8,10 +8,10 @@
         padding: 0;
       }
       h2 {
-        margin-bottom: 0;
+        margin-bottom: 20px;
         margin-top: 20px;
         @media (min-width: 768px) {
-          margin-bottom: 17px;
+          // margin-bottom: 17px;
           margin-top: 120px;
         }
       }
