--- a/css/index/_chooseUs.scss
+++ b/css/index/_chooseUs.scss
@@ -12,6 +12,7 @@
           text-align: left;
         }
         h2 {
+          // margin-bottom: 20px;
           @media (min-width: 1200px) {
             margin-bottom: 20px;
           }
