--- a/css/index/_services.scss
+++ b/css/index/_services.scss
@@ -2,7 +2,7 @@
   background-color: #f0efe9;
   position: relative;
   z-index: 0;
-  padding: 40px 50px 130px 30px;
+  // padding: 40px 50px 130px 30px;
   .background-lines-right {
     position: absolute;
     bottom: 0px;
@@ -22,7 +22,7 @@
         text-align: left;
       }
       h3{
-        margin-bottom: -10px;
+        // margin-bottom: -10px;
         padding-top: 0;
       }
     }
@@ -31,12 +31,13 @@
       grid-row-gap: 30px;
       @media (min-width: 768px) {
         display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 50% 50%;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
         grid-column-gap: 30px;
       }
       @media (min-width: 1200px) {
         grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: 1fr;
         text-align: left;
         margin-right: 70px;
       }
@@ -108,7 +109,7 @@
       }
     }
     .btn-transparent, .btn-center {
-      margin: 50px auto 0 auto;
+      margin: 50px auto 30px auto;
     }
   }
 }
