--- a/css/index/_testimonial.scss
+++ b/css/index/_testimonial.scss
@@ -14,6 +14,7 @@
       margin-bottom: 5rem;
       h2 {
         margin-top: 70px;
+        margin-bottom: 20px;
       }
       h3 {
         padding-bottom: 0;
