--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,600;9..40,700&family=Hanken+Grotesk:wght@200;300;400;500;600&display=swap");
 header {
   display: flex;
-  background-color: #F0EFE9;
+  background-color: #f0efe9;
   /* placera headern i mitten */
   margin-left: auto;
   margin-right: auto;
@@ -138,7 +138,7 @@ header .container .btn-login {
 }
 
 .showcase {
-  background-color: #F0EFE9;
+  background-color: #f0efe9;
   position: relative;
   z-index: 1;
 }
@@ -193,16 +193,19 @@ header .container .btn-login {
   margin-bottom: 55px;
   width: 90%;
 }
-.showcase .container .content-left .btn-yellow, .showcase .container .content-left .btn-transparent {
+.showcase .container .content-left .btn-yellow,
+.showcase .container .content-left .btn-transparent {
   display: block;
   margin-bottom: 20px;
   z-index: 1;
 }
-.showcase .container .content-left .btn-yellow:hover, .showcase .container .content-left .btn-transparent:hover {
+.showcase .container .content-left .btn-yellow:hover,
+.showcase .container .content-left .btn-transparent:hover {
   transform: scale(1.1);
 }
 @media (min-width: 768px) {
-  .showcase .container .content-left .btn-yellow, .showcase .container .content-left .btn-transparent {
+  .showcase .container .content-left .btn-yellow,
+  .showcase .container .content-left .btn-transparent {
     display: inline-block;
     margin-right: 10px;
   }
@@ -217,18 +220,20 @@ header .container .btn-login {
   }
 }
 
-h3 {
-  font-size: 18px;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  padding-left: 10px;
-  padding-right: 10px;
+.img-advertising {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: white;
 }
-@media (min-width: 768px) {
-  h3 {
-    font-size: 20px;
-    padding-left: 0;
-    padding-right: 0;
+.img-advertising img {
+  display: none;
+}
+@media (min-width: 992px) {
+  .img-advertising img {
+    display: block;
+    padding: 30px;
+    z-index: 1;
+    margin-block: 55px;
   }
 }
 
@@ -265,7 +270,7 @@ h3 {
 }
 @media (min-width: 1200px) {
   .features .border-container {
-    border: 1px solid #E7E7E7;
+    border: 1px solid #e7e7e7;
     padding-inline-end: 180px;
     padding-inline-start: 90px;
   }
@@ -405,17 +410,13 @@ h3 {
 .about .container .content h2 {
   margin-bottom: 10px;
 }
-@media (min-width: 1200px) {
-  .about .container .content h2 {
-    margin-bottom: -15px;
-  }
-}
 .about .container .content h3 {
   margin-bottom: 0;
+  margin-top: 30px;
 }
 @media (min-width: 1200px) {
   .about .container .content h3 {
-    margin-bottom: -30px;
+    margin-bottom: 20px;
   }
 }
 .about .container .content .p-last {
@@ -440,6 +441,7 @@ h3 {
   .about .container .content p {
     padding: 10px 0 10px 0;
     text-align: left;
+    line-height: 2rem;
   }
 }
 .about .container .content .flex-row {
@@ -556,7 +558,6 @@ h3 {
   background-color: #f0efe9;
   position: relative;
   z-index: 0;
-  padding: 40px 50px 130px 30px;
 }
 .services .background-lines-right {
   position: absolute;
@@ -581,7 +582,6 @@ h3 {
   }
 }
 .services .container .headlines h3 {
-  margin-bottom: -10px;
   padding-top: 0;
 }
 .services .container .content {
@@ -591,14 +591,15 @@ h3 {
 @media (min-width: 768px) {
   .services .container .content {
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 50%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-column-gap: 30px;
   }
 }
 @media (min-width: 1200px) {
   .services .container .content {
     grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 1fr;
     text-align: left;
     margin-right: 70px;
   }
@@ -685,8 +686,9 @@ h3 {
   font-size: 22px;
 }
 .services .container .btn-transparent, .services .container .btn-center {
-  margin: 50px auto 0 auto;
+  margin: 50px auto 30px auto;
 }
+
 .choose-us .container {
   z-index: 0;
 }
@@ -732,7 +734,7 @@ h3 {
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: 1fr 1fr;
-    background-color: #FFF;
+    background-color: #fff;
     width: 50%;
   }
 }
@@ -790,7 +792,7 @@ h3 {
 @media (min-width: 1200px) {
   .choose-us .container .main-img-container .frame-grey {
     display: block;
-    background-color: #F0EFE9;
+    background-color: #f0efe9;
     width: 70%;
     position: absolute;
     top: 10px;
@@ -826,6 +828,7 @@ h3 {
     z-index: 2;
   }
 }
+
 .case .container .headlines {
   margin-top: 90px;
   text-align: center;
@@ -837,12 +840,11 @@ h3 {
   }
 }
 .case .container .headlines h2 {
-  margin-bottom: 0;
+  margin-bottom: 20px;
   margin-top: 20px;
 }
 @media (min-width: 768px) {
   .case .container .headlines h2 {
-    margin-bottom: 17px;
     margin-top: 120px;
   }
 }
@@ -1036,6 +1038,7 @@ h3 {
   transform: scale(1.1);
   transition: 0.5s;
 }
+
 .team {
   background-color: #edcf86;
 }
@@ -1204,6 +1207,7 @@ h3 {
 }
 .testimonial .container .top-heading h2 {
   margin-top: 70px;
+  margin-bottom: 20px;
 }
 .testimonial .container .top-heading h3 {
   padding-bottom: 0;
@@ -1355,9 +1359,14 @@ h3 {
 }
 .articles-news .container .articles {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
   text-align: center;
+}
+@media (min-width: 576px) {
+  .articles-news .container .articles {
+    grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+  }
 }
 .articles-news .container .articles a article {
   position: relative;
@@ -1706,6 +1715,26 @@ textarea {
   width: 100%;
 }
 
+/*Style for next and previous-buttons*/
+.next-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.previous {
+  list-style-type: none;
+}
+
+.page-number {
+  color: aqua;
+}
+
+.next {
+  color: rgb(217, 17, 17);
+}
+
 footer {
   background-color: #0e1021;
 }
@@ -1997,6 +2026,10 @@ body {
   margin-top: 30px;
 }
 
+.heading-red {
+  margin-bottom: 40px;
+}
+
 h2 {
   color: #F94D1C;
   font-size: 18px;
@@ -2013,6 +2046,7 @@ h3 {
 @media (min-width: 768px) {
   h3 {
     font-size: 45px;
+    margin-bottom: 40px;
   }
 }
 
@@ -2120,3 +2154,41 @@ h4 {
   color: #F0EFE9;
 }
 
+/*Style for next and previous-buttons*/
+.next-page {
+  display: flex;
+  gap: 10px;
+  margin-block: 95px 85px;
+}
+.next-page .previous {
+  border: 1px solid rgba(204, 204, 204, 0.488);
+  border-radius: 5px;
+  height: 39px;
+  width: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.next-page .page-number-one {
+  background-color: #191919;
+  color: #f0efe9;
+}
+.next-page .page-number {
+  border: 1px solid rgba(204, 204, 204, 0.488);
+  border-radius: 5px;
+  height: 39px;
+  width: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.next-page .next {
+  border: 1px solid rgba(204, 204, 204, 0.488);
+  border-radius: 5px;
+  height: 39px;
+  width: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
