--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -208,7 +208,7 @@ footer {
         i {
           color: #fff;
           &:hover {
-            transition: 0.5s;
+            transition: 0.5s ease-in-out;
             transform: scale(1.8);
             color: $btn-yellow;
           }
