--- a/css/index/_articles-news.scss
+++ b/css/index/_articles-news.scss
@@ -63,7 +63,7 @@
             height: auto;
             &:hover {
               opacity: 0.8;
-              transition: 0.5s;
+              transition: 0.5s ease-in-out;
             }
           }
           .box-date {
@@ -164,12 +164,11 @@
       border-radius: 50%;
       display: inline-block;
       margin-right: 6px;
-      &:hover {
-        color: $text-color-dark;
-      }
     }
     .dot-active {
       background-color: #191919;
     }
   }
 }
+
+
