--- a/css/index/_subscribe.scss
+++ b/css/index/_subscribe.scss
@@ -65,7 +65,7 @@
         z-index: 0;
         &:hover {
           transform: scale(1.1);
-          transition: 0.5s;
+          transition: 0.5s ease-in-out;
         }
       }
     }
