--- a/css/style.scss
+++ b/css/style.scss
@@ -89,7 +89,7 @@ h4 {
   //vid hover, ändra bakgrundsfärg + textfärg samt öka padding
   &:hover {
     background-color: $btn-black;
-    transition: 0.5s;
+    transition: 0.5s ease-in-out;
     transform: scale(1.1);
     color: $text-color-light;
   }
@@ -110,7 +110,7 @@ h4 {
   //vid hover, ändra bakgrundsfärg + textfärg samt öka padding
   &:hover {
     background-color: $btn-black;
-    transition: 0.5s;
+    transition: 0.5s ease-in-out;
     transform: scale(1.1);
     color: $text-color-light;
   }
@@ -131,7 +131,7 @@ h4 {
   //Vid hover, ändra bakgrundsfärg + textfärg, samt öka padding
   &:hover {
     background-color: $btn-yellow;
-    transition: 0.5s;
+    transition: 0.5s ease-in-out;
     transform: scale(1.1);
     color: $text-color-dark;
   }
@@ -153,7 +153,7 @@ h4 {
   // Vid hover, ändra bakgrundsfärg + textfärg, samt öka padding
   &:hover {
     background-color: $btn-black;
-    transition: 0.5s;
+    transition: 0.5s ease-in-out;
     transform: scale(1.1);
     color: $text-color-light;
   }
